--- a/02-plater-prep-oxidative.Rmd
+++ b/02-plater-prep-oxidative.Rmd
@@ -47,6 +47,7 @@ knitr::opts_chunk$set(tidy.opts = list(width.cutoff=60))
 library(tidyverse)
 library(readxl)
 library(glue)
+library(plater)
 
 ```
 
@@ -174,7 +175,7 @@ Now that we have our completed templates in dataframe form, we need to write the
 
 # function to save each template as a CSV using the specified export path
 save_templates_fun <- function(plater_templates, export_paths){
-  write.csv(plater_templates, export_paths, row.names = FALSE )
+  write_csv(plater_templates, export_paths, col_names = TRUE)
 }
 
 # write all templates to CSV, save in auto-templates sub-directory
@@ -190,3 +191,13 @@ Now that you have one CSV file template saved for each plate, you should consult
 # Additional Improvements 
 
 - Add ideas for additional improvements to this script here. 
+
+```{r read-test}
+test_dir <- dir("./auto_templates_oxidative/")
+
+test_paths <- paste0("./auto_templates_oxidative/", test_dir)
+
+read_plates(test_paths)
+
+```
+
