--- a/02-plater-prep-oxidative.Rmd
+++ b/02-plater-prep-oxidative.Rmd
@@ -39,11 +39,14 @@ The script was written to ingest an arbitrary number of excel files with multipl
 
 If you do not already have the packages below installed in R, you may need to install them first.  
 
-```{r setup, message=FALSE}
+```{r setup, echo = FALSE, message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(tidy = TRUE)
 knitr::opts_chunk$set(tidy.opts = list(width.cutoff=60))
+```
 
+
+```{r packages, message=FALSE}
 library(tidyverse)
 library(readxl)
 library(glue)
@@ -162,7 +165,7 @@ dir.create("./auto_templates_oxidative/")
 # export_paths col contains full path and file name for saving each completed template
 incl_templates <- fluor_import %>% 
   mutate(plater_templates = map2(sheet,fluor_data, template_fun), 
-         export_paths = as.character(glue("./auto_templates_oxidative/plater-{sheet}.csv")))
+         export_paths = as.character(glue("./auto_templates_oxidative/{sheet}.csv")))
 
 ```
 
@@ -188,9 +191,9 @@ save_templates <- incl_templates %>%
 
 Now that you have one CSV file template saved for each plate, you should consult your lab notes and flag bad wells in the "Bad_wells" section of the appropriate template.  Additional quality control will be performed in the analysis script.  
 
-# Additional Improvements 
+# Read test 
 
-- Add ideas for additional improvements to this script here. 
+Test if the `plater` function `read_plates()` will work on the templates you just created. 
 
 ```{r read-test}
 test_dir <- dir("./auto_templates_oxidative/")
